--- a/index.html
+++ b/index.html
@@ -7,25 +7,20 @@
     <title>TW</title>
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
   </head>
-  <body>
-    <h1 class="text-6xl">Hello</h1>
-    <article>
-      <h1>Heading level 1</h1>
-      <h2>Heading level 2</h2>
-      <h3>Hello</h3>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, a nulla
-        facilis maiores neque harum, commodi tempora quae deserunt dignissimos
-        placeat qui mollitia totam eveniet? Eum soluta, porro at eveniet
-        repellat laborum consequuntur, corrupti ratione, facere sit nemo
-        repellendus.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id
-        exercitationem ex magnam nesciunt ullam consequuntur, voluptas quaerat
-        ad et officia debitis aliquid quo nisi cum? Aliquid provident velit
-        expedita. Repellat, inventore molestias!
-      </p>
-    </article>
+  <body class="p-6">
+    <section class="bg-blue-500 py-8 px-12 rounded-xl grid grid-cols-2">
+      <div>
+        <h2>We prove the best seo and digital marketing on demand</h2>
+        <p>
+          All our content marketing service packages include a custom content
+          strategy All our content marketing service packages include a custom
+          content strategy.
+        </p>
+        <div>
+          <a href="#0">Get started</a>
+        </div>
+      </div>
+      <img src="hike.svg" alt="Hiker illustration" />
+    </section>
   </body>
 </html>
