--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
   </head>
   <body class="p-6">
-    <section class="bg-blue-500 py-8 px-12 rounded-xl grid grid-cols-2">
+    <section>
       <div>
         <h2>We prove the best seo and digital marketing on demand</h2>
         <p>
